[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/ShelterPanel/ShetlerPanel.gd" type="Script" id=1]
[ext_resource path="res://Themes/Main.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Sourced/Icons/FontAwesome/fire_solid_white_large.png" type="Texture" id=3]
[ext_resource path="res://Themes/Fonts/markazi_text_48pt.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/BattleDeckEnergy/FireShader.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/transparent = Color( 0.505882, 0.0470588, 0.0470588, 0 )
shader_param/inner_color = Color( 1, 0.737255, 0.878431, 1 )
shader_param/outer_color = Color( 1, 0.411765, 0.729412, 1 )
shader_param/inner_threshold = 0.36
shader_param/outer_threshold = 0.1
shader_param/soft_edge = 0.08
shader_param/center = Vector2( 0.5, 0.8 )

[node name="ShelterPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 360 )
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -230.0
margin_right = 340.0
margin_bottom = -171.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "A new friend offers you shelter..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -128.0
margin_right = 96.0
margin_bottom = 128.0
texture = ExtResource( 3 )
expand = true

[node name="OptionsContainer" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -85.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DineControl" type="Control" parent="OptionsContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DineButton" type="Button" parent="OptionsContainer/HBoxContainer/DineControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -19.0
margin_right = 112.0
margin_bottom = 19.0
rect_min_size = Vector2( 224, 38 )
text = "Dine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsContainer/HBoxContainer/DineControl"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 24.0
margin_bottom = 54.0
text = "Heal 20% of your Max Health"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BathControl" type="Control" parent="OptionsContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BathButton" type="Button" parent="OptionsContainer/HBoxContainer/BathControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -19.0
margin_right = 112.0
margin_bottom = 19.0
rect_min_size = Vector2( 224, 38 )
text = "Bath"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsContainer/HBoxContainer/BathControl"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 24.0
margin_bottom = 54.0
text = "Clean your Deck of 1 Card"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OptionsContainer/HBoxContainer/DineControl/DineButton" to="." method="_on_DineButton_pressed"]
[connection signal="pressed" from="OptionsContainer/HBoxContainer/BathControl/BathButton" to="." method="_on_BathButton_pressed"]
